--- a/WarehouseEcommerce/Views/Theme/University/Orders/_PaymentMethod.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Orders/_PaymentMethod.cshtml
@@ -7,7 +7,7 @@
                    id="cash__checkbox"
                    type="radio"
                    name="payment-method-radio"
-                   value="@((int)PaymentMethod.Cash)" />
+                   value="@((int)PaymentMethodEnum.Cash)" />
             <label for="cash__checkbox">Cash</label>
         </div>
         <div class="checkboxwrap">
@@ -15,7 +15,7 @@
                    id="paypal__checkbox"
                    type="radio"
                    name="payment-method-radio"
-                   value="@((int)PaymentMethod.Paypal)" />
+                   value="@((int)PaymentMethodEnum.Paypal)" />
             <label for="paypal__checkbox">Paypal</label>
         </div>
         <div class="checkboxwrap">
@@ -23,7 +23,7 @@
                    id="sage-pay__checkbox"
                    type="radio"
                    name="payment-method-radio"
-                   value="@((int)PaymentMethod.SagePay)" />
+                   value="@((int)PaymentMethodEnum.SagePay)" />
             <label for="sage-pay__checkbox">Sage Pay</label>
         </div>
         <button class="addnwShopAdrrbtn" onclick="choosePaymentMethod()">SELECT PAYMENT METHOD</button>
