--- a/WarehouseEcommerce/Views/Theme/Smart/Shared/_TopCategoryProductsPartial.cshtml
+++ b/WarehouseEcommerce/Views/Theme/Smart/Shared/_TopCategoryProductsPartial.cshtml
@@ -40,7 +40,7 @@
                         @* <p class="pricedis price text-right"><span class="price-new"> $ 200</span> <span class="price-old">$344.00</span></p>*@
                     </div>
                     @*<div class="button-group">
-                        <button type="button" class="acart" onclick="AddToCart()">
+                        <button type="button" class="acart" onclick="addToCart()">
                             <span>Add to Cart</span>
                         </button>
                     </div>*@
