--- a/WarehouseEcommerce/Views/Theme/University/Shared/_Layout.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Shared/_Layout.cshtml
@@ -68,9 +68,9 @@
                 <div class="modal-body">
 
                 </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-success" onclick="CartItemCount();">Continue Shoping</button>
-                    <a href="@Url.Action("AddToCart","Products")" type="button" class="btn btn-default">Go to Basket</a>
+                <div class="botomBtnsec modal-footer">
+                    <button class="btmbtn sho" onclick="CartItemCount();">CONTINUE SHOPPING</button>
+                    <button class="btmbtn pro" onclick="window.location.href='@Url.Action("AddToCart", "Products")'">Go To Basket</button>
                 </div>
             </div>
         </div>
