--- a/WarehouseEcommerce/Views/Theme/Smart/Products/GroupedProductDetail.cshtml
+++ b/WarehouseEcommerce/Views/Theme/Smart/Products/GroupedProductDetail.cshtml
@@ -228,7 +228,7 @@
                                                             <div class="button-submit">
                                                                 @if (productitems.KitProductMaster.SellPrice > 0 && productitems.KitProductMaster.SellPrice.HasValue && productitems.KitProductMaster.PercentMargin > 0)
                                                                 {
-                                                                    <button type="Submit" name="submitNewsletter" class="btn btn-block move-to-cart-btn" id="button-cart" onclick="AddToCart(@productitems.KitProductMaster.ProductId)">Add to Basket</button>
+                                                                    <button type="Submit" name="submitNewsletter" class="btn btn-block move-to-cart-btn" id="button-cart" onclick="addToCart(@productitems.KitProductMaster.ProductId)">Add to Basket</button>
                                                                 }
                                                                 else
                                                                 {
@@ -270,7 +270,7 @@
                                                             <div class="button-submit">
                                                                 @if (productitems.KitProductMaster.SellPrice > 0 && productitems.KitProductMaster.SellPrice.HasValue && productitems.KitProductMaster.PercentMargin > 0)
                                                                 {
-                                                                    <button type="Submit" name="submitNewsletter" class="btn btn-block move-to-cart-btn" id="button-cart" onclick="AddToCart(@productitems.KitProductMaster.ProductId)">Add to Basket</button>
+                                                                    <button type="Submit" name="submitNewsletter" class="btn btn-block move-to-cart-btn" id="button-cart" onclick="addToCart(@productitems.KitProductMaster.ProductId)">Add to Basket</button>
                                                                 }
                                                                 else
                                                                 {
