--- a/WarehouseEcommerce/Views/Theme/Smart/Products/ProductDetails.cshtml
+++ b/WarehouseEcommerce/Views/Theme/Smart/Products/ProductDetails.cshtml
@@ -115,7 +115,7 @@
                             <hr class="hr-line">
                             @if (@Model.SellPrice > 0 && @Model.SellPrice.HasValue && @Model.PercentMargin > 0)
                             {
-                                <button type="button" id="button-cart" class="btn add-to-cart btn-primary" onclick="AddToCart(@Model.ProductId)">Add to Basket</button>
+                                <button type="button" id="button-cart" class="btn add-to-cart btn-primary" onclick="addToCart(@Model.ProductId)">Add to Basket</button>
                             }
                             else
                             {
