--- a/WarehouseEcommerce/Views/Theme/Smart/Shared/_SpecialProductPartial.cshtml
+++ b/WarehouseEcommerce/Views/Theme/Smart/Shared/_SpecialProductPartial.cshtml
@@ -53,7 +53,7 @@
                                     <div class="button-group">
                                         @if (@Model.productMasterList[i].SellPrice > 0 && @Model.productMasterList[i].SellPrice.HasValue && @Model.productMasterList[i].PercentMargin > 0)
                                         {
-                                            <button type="button" class="acart" onclick="AddToCart(@Model.productMasterList[i].ProductId)">
+                                            <button type="button" class="acart" onclick="addToCart(@Model.productMasterList[i].ProductId)">
                                                 <span>Add to Basket</span>
                                             </button>
                                         }
@@ -98,7 +98,7 @@
                                     <div class="button-group">
                                         @if (@Model.productMasterList[i].SellPrice > 0 && @Model.productMasterList[i].SellPrice.HasValue && @Model.productMasterList[i].PercentMargin > 0)
                                         {
-                                            <button type="button" class="acart" onclick="AddToCart(@Model.productMasterList[i].ProductId)">
+                                            <button type="button" class="acart" onclick="addToCart(@Model.productMasterList[i].ProductId)">
                                                 <span>Add to Basket</span>
                                             </button>
                                         }
@@ -143,7 +143,7 @@
                                     <div class="button-group">
                                         @if (@Model.productMasterList[i].SellPrice > 0 && @Model.productMasterList[i].SellPrice.HasValue && @Model.productMasterList[i].PercentMargin > 0)
                                         {
-                                            <button type="button" class="acart" onclick="AddToCart(@Model.productMasterList[i].ProductId)">
+                                            <button type="button" class="acart" onclick="addToCart(@Model.productMasterList[i].ProductId)">
                                                 <span>Add to Basket</span>
                                             </button>
                                         }
