--- a/WarehouseEcommerce/Views/Theme/University/Orders/_AddOrEditAddress.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Orders/_AddOrEditAddress.cshtml
@@ -57,7 +57,7 @@
                     </div>
                 </div>
 
-                @if (Model.CurrentStep == CheckoutStep.ShippingAddress || (CheckoutStep)Model.ParentStep == CheckoutStep.ShippingAddress)
+                @if (Model.CurrentStep == CheckoutStep.ShippingAddress || (CheckoutStep)Model.StepsHistory.Last(s => s != Model.CurrentStep) == CheckoutStep.ShippingAddress)
                 {
 
                     <input type="hidden" name="AccountAddress.AddTypeShipping" id="AccountAddress.AddTypeShipping" value="true" />
@@ -72,8 +72,7 @@
 
             <div class="saveAddrWrap">
                 <button type="Submit" name="submitNewsletter" class="saveAddrBtn">Save Address</button>&nbsp;&nbsp;
-                <a href="@Url.Action("checkout","orders",new{ checkoutStep=Model.ParentStep})" class="btn btn-default saveAddrBtn">Back</a>
-
+                <a href="@Url.Action("GoToPreviousStep","orders")" class="saveAddrBtn">Back</a>
             </div>
         }
     </div>
