--- a/WarehouseEcommerce/Views/Theme/University/Orders/_BillingAddress.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Orders/_BillingAddress.cshtml
@@ -3,21 +3,18 @@
 @{
     var address = Model.Addresses;
     var billingAddress = address.FirstOrDefault();
-    //data - CurrentStep = "@step" data - ParentStep = "@parentStep"
     if (billingAddress != null)
     {
         <div class="address-wrapper">
             <h5 class="subheadCmn">Billing Address</h5>
             @Html.Partial("_AddressDetail", billingAddress)
             <div class="btnWrap">
-                <a href="javascript:;" data-AccountId="@(Model.AccountId??null)" data-billingAddressId="@(billingAddress.AddressID)" data-ShippingAddressId="@(Model.ShippingAddressId??null)" data-currentstep="@((int)CheckoutStep.DeliveryMethod)" data-CollectionPointId="@(Model.CollectionPointId??null)" onclick="moveToNextStep(this)" data-ShipmentRuleId="@(Model.ShipmentRuleId??null)" class="btmBtn">
+                <a href="javascript:;" data-AccountId="@(Model.AccountId??null)" data-billingAddressId="@(billingAddress.AddressID)" data-ShippingAddressId="@(Model.ShippingAddressId??null)" data-currentstep="@((int)CheckoutStep.PaymentMethod)" data-CollectionPointId="@(Model.CollectionPointId??null)" onclick="moveToNextStep(this)" data-ShipmentRuleId="@(Model.ShipmentRuleId??null)" class="btmBtn">
                     Select Address
                 </a>
 
-                @*@Url.Action("Checkout", "Orders", new { accountId = Model.AccountId, billingAddressId = billingAddress.AddressID, step = (int)CheckoutStep.DeliveryMethod })" class="btmBtn">*@
-
-                @*<a href="@Url.Action("Checkout", "Orders", new {accountId = billingAddress.AccountID, accountAddressId = billingAddress.AddressID, step = (int) CheckoutStep.AddOrEditAddress, parentStep = })"  class="btmBtn">Edit Address</a>*@
-                <a href="javascript:;" data-AccountId="@(Model.AccountId??null)" data-accountAddressId="@billingAddress.AddressID"  data-currentstep="@((int) CheckoutStep.AddOrEditAddress)" data-parentstep="@((int) CheckoutStep.BillingAddress)" onclick="moveToNextStep(this)" class="btmBtn">Edit Address</a>
+                <a href="javascript:;" data-AccountId="@(Model.AccountId??null)" data-accountAddressId="@billingAddress.AddressID" data-currentstep="@((int)CheckoutStep.AddOrEditAddress)" onclick="moveToNextStep(this)" class="btmBtn">Edit Address</a>
+                <a href="@Url.Action("GoToPreviousStep","orders")" class="btmBtn">Back</a>
             </div>
         </div>
     }
