--- a/WarehouseEcommerce/Views/Theme/University/Orders/_DeliveryMethod.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Orders/_DeliveryMethod.cshtml
@@ -4,22 +4,22 @@
     <h5 class="subheadCmn">Select Delivery Method</h5>
     <div class="checkboxwrap">
         <input class="styled-checkbox"
-               id="pickup__checkbox"
-               type="radio"
-               name="delivery-method-radio"
-               value="@((int)DeliveryMethod.ToPickupPoint)" />
+                id="pickup__checkbox"
+                type="radio"
+                name="delivery-method-radio"
+                value="@((int)DeliveryMethod.ToPickupPoint)" />
         <label for="pickup__checkbox">Pick up (From Collection Point) - Free</label>
     </div>
     <div class="checkboxwrap">
         <input class="styled-checkbox"
-               id="courier__checkbox"
-               type="radio"
-               name="delivery-method-radio"
-               value="@((int)DeliveryMethod.ToShipmentAddress)" />
+                id="courier__checkbox"
+                type="radio"
+                name="delivery-method-radio"
+                value="@((int)DeliveryMethod.ToShipmentAddress)" />
         <label for="courier__checkbox">Delivery to Address (Courier) </label>
     </div>
-    <button class="addnwShopAdrrbtn" onclick="chooseDeliveryMethod()">SELECT DELIVERY METHOD</button>
-
-        <a href="@Url.Action("checkout","orders",new{ checkoutStep=CheckoutStep.BillingAddress})" class="btn addnwShopAdrrbtn">Back</a>
-    
+    <div class="btnWrap">
+        <button class="addnwShopAdrrbtn" onclick="chooseDeliveryMethod()">SELECT DELIVERY METHOD</button>
+        <a href="@Url.Action("GoToPreviousStep","orders")" class="addnwShopAdrrbtn">Back</a>
+    </div>
 </div>
