--- a/WarehouseEcommerce/Views/Theme/University/Shared/_wishlistItems.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Shared/_wishlistItems.cshtml
@@ -25,7 +25,7 @@
                         </td>
                         <td>
                             <div>
-                                <a href="javascript:;" class="btn btn-success" onclick="AddToCart(@item.ProductMaster.ProductId)">Add to Basket</a> <br /><br />
+                                <a href="javascript:;" class="btn btn-success" onclick="addToCart(@item.ProductMaster.ProductId)">Add to Basket</a> <br /><br />
                                 <a href="javascript:;" class="btn btn-danger" onclick="RemoveWishItem(@item.ProductMaster.ProductId)">Remove</a>
                                 <br /><br />
                                 <div class="custom-control custom-switch">
